--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -20,6 +20,45 @@
 	    <link rel="stylesheet" type="text/css" th:href="@{css/HomePageStyle.css}">
 
   <style>
+  .fa {
+padding-top:10px;
+  padding-right: 10px;
+  padding-left:10px;
+  padding-bottom:10px;
+  font-size: 20px;
+  width: 40px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+	color:white;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
   #registerbutt .tooltiptext {
     visibility: hidden;
     width: 150px;
@@ -118,17 +157,17 @@ background-color:#dddddd !important;
 		</div>-->
 		
 		<br>
-		<div class="row page-header" style="text-align:center;">
-			<div class="col-sm-12"><h5>Contact Info:</h5></div>
+		<div class="row page-header" style="text-align:left;">
+			<div class="col-sm-12"><h5>&nbsp&nbsp&nbspContact Info:</h5></div>
 		</div>
-		<div class="row" style="text-align:center;">
+		<div class="row" style="text-align:left;">
 			<div class="col-sm-12"><h6 id="created_by"></h6></div>
 		</div>
 		
-		<div class="row" style="text-align:center;">
+		<div class="row" style="text-align:left;">
 			<div class="col-sm-12"><h6 id="user_email"></h6></div>
 		</div>
-		<div class="row" style="text-align:center;">
+		<div class="row" style="text-align:left;">
 	
 			<div class="col-sm-12"><h6 id="user_contact"></h6></div>
 		</div><br>
@@ -159,7 +198,7 @@ background-color:#dddddd !important;
 <br><br><br><br><br>
 
 
- <div id="chat-page" class="hidden" style="min-width:350px;max-width:350px">
+ <div id="chat-page" class="hidden" style="min-width:350px;max-width:350px;min-height:auto;">
 	<div class="chat-container">
 		<div class="chat-header">
 			<table><tr><td align="left" id="organiser_chatname"><h5>Help Desk</h5></td>
@@ -181,7 +220,41 @@ background-color:#dddddd !important;
 	</div>
 </div>
 
+<div class="container-fluid fancy" style="border-top:1px solid lightgrey;text-align:center;top:20%;height:auto;position:relative;background-color:#D5B4AA !important;color:">
+<br><div class="row" style="background-color:;">
+	<!--<div class="col-sm-4">
+	<div class="row" style="background-color:lightgrey"><div class="col-sm-12"><h4 style="color:#AE0D0D">Hoosier Events</h4></div></div>
+		<div class="row" style="text-align:center;"><div class="col-sm-12">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div></div>
+	<br>
+	</div>-->
+	<div class="col-sm-6 links" style="color:#AE0D0D;"><div class="row"  style="background-color:"><div class="col-sm-12"><h4>About HoosierEvents</h4></div></div>
+		
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">Sitemap</a></div></div>
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">About us</a></div></div>
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">FAQs</a></div></div>
+		<br>
+	</div>
+	
+	<div class="col-sm-6"><div class="row"  style="background-color:"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
+				           <!--  <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
+							<br>
+				            <i class="fa fa-envelope mr-3"></i>&nbsp info@example.com
+							<br>
+							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88 -->
 
+	<div class="row">
+		<div class="col-sm-4"></div>
+
+		<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-facebook"></a></div>
+<div class="col-sm-1" style="padding-right:25px;"><a href="#" class="fa fa-twitter"></a></div>
+<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-google"></a></div>
+<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-instagram"></a></div>
+<div class="col-sm-4"></div>
+		</div>
+	</div>
+</div>
+</div>
+<!--
 <div class="container-fluid fancy" style="text-align:center;top:20%;height:auto;position:relative;background-color:lightgrey !important;color:">
 <div class="row" style="background-color:;">
 	<div class="col-sm-4">
@@ -207,7 +280,7 @@ background-color:#dddddd !important;
 
 	</div>
 </div>
-</div>
+</div>-->
 
 
 
@@ -233,11 +306,11 @@ $(document).ready(function(){
 			document.getElementById("event_date").innerHTML=data.startDate;
 			document.getElementById("event_location").innerHTML=data.location;
 			document.getElementById("event_description").innerHTML=data.description;
-			document.getElementById("created_by").innerHTML=data.createdBy.name;
+			document.getElementById("created_by").innerHTML="&nbsp&nbsp&nbsp"+data.createdBy.name;
 			document.getElementById('myIframe').src = "/map?seed=" + data.location;
 			document.getElementById("eventlocation").innerHTML=data.location;
-									document.getElementById("user_email").innerHTML=data.createdBy.email;
-						document.getElementById("user_contact").innerHTML=data.createdBy.contact;
+									document.getElementById("user_email").innerHTML="&nbsp&nbsp&nbsp"+data.createdBy.email;
+						document.getElementById("user_contact").innerHTML="&nbsp&nbsp&nbsp"+data.createdBy.contact;
 			
 	   },
 	   //error:function(exception){alert('Exeption:'+exception);}
