--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -6,11 +6,55 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="/css/newhomepage.css">
 
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
 <!--  	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+		  	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	    <link rel="stylesheet" type="text/css" th:href="@{css/HomePageStyle.css}">
 <style>
+
+  .fa {
+padding-top:10px;
+  padding-right: 10px;
+  padding-left:10px;
+  padding-bottom:10px;
+  font-size: 20px;
+  width: 40px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+	color:white;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
 body{
-background-color:;
+     font-family: 'Oxygen', sans-serif;
 }
 .card {
     transition: 0.3s;
@@ -214,29 +258,37 @@ img {
 <div id="display2" class="container" style="height:75%;background-color:;width:100%;overflow-y:scroll;">
 </div>
 
-<div class="container-fluid fancy" style="text-align:center;top:20%;height:auto;position:relative;background-color:lightgrey !important;color:">
-<div class="row" style="background-color:;">
-	<div class="col-sm-4">
-	<div class="row"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Hoosier Events</h4></div></div>
+<div class="container-fluid fancy" style="border-top:1px solid lightgrey;text-align:center;top:20%;height:auto;position:relative;background-color:#D5B4AA !important;color:">
+<br><div class="row" style="background-color:;">
+	<!--<div class="col-sm-4">
+	<div class="row" style="background-color:lightgrey"><div class="col-sm-12"><h4 style="color:#AE0D0D">Hoosier Events</h4></div></div>
 		<div class="row" style="text-align:center;"><div class="col-sm-12">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div></div>
 	<br>
-	</div>
-	<div class="col-sm-4 links" style="color:#AE0D0D;"><div class="row"><div class="col-sm-12"><h4>Useful Links</h4></div></div>
+	</div>-->
+	<div class="col-sm-6 links" style="color:#AE0D0D;"><div class="row"  style="background-color:"><div class="col-sm-12"><h4>About HoosierEvents</h4></div></div>
 		
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">Your Account</a></div></div>
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">About us</a></div></div>
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#48A2BD">Help</a></div></div>
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">Sitemap</a></div></div>
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">About us</a></div></div>
+		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">FAQs</a></div></div>
 		<br>
 	</div>
 	
-	<div class="col-sm-4"><div class="row"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Contact Us</h4></div></div>
-				            <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
+	<div class="col-sm-6"><div class="row"  style="background-color:"><div class="col-sm-12" style="text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
+				           <!--  <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
 							<br>
 				            <i class="fa fa-envelope mr-3"></i>&nbsp info@example.com
 							<br>
-							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88
+							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88 -->
 
+		<div class="row">
+		<div class="col-sm-4"></div>
 
+		<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-facebook"></a></div>
+<div class="col-sm-1" style="padding-right:25px;"><a href="#" class="fa fa-twitter"></a></div>
+<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-google"></a></div>
+<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-instagram"></a></div>
+<div class="col-sm-4"></div>
+		</div>
 	</div>
 </div>
 </div>
