UI changes to eventpage

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/newhomepage.css">
 
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen" rel="stylesheet">
 <!--  	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 		  	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -54,7 +54,7 @@ padding-top:10px;
 }
 
 body{
-     font-family: 'Oxygen', sans-serif;
+font-family: 'Open Sans', sans-serif;
 }
 .card {
     transition: 0.3s;
@@ -258,22 +258,27 @@ img {
 <div id="display2" class="container" style="height:50%;background-color:;width:100%;overflow-y:scroll;">
 </div>
 
-<div class="container-fluid fancy" style="border-top:1px solid lightgrey;text-align:center;top:20%;height:auto;position:relative;background-color:#D5B4AA !important;color:">
+<div class="container-fluid fancy" style="border-top:1px solid lightgrey;text-align:center;top:20%;height:auto;position:relative;background-color: !important;color:">
 <br><div class="row" style="background-color:;">
 	<!--<div class="col-sm-4">
 	<div class="row" style="background-color:lightgrey"><div class="col-sm-12"><h4 style="color:#AE0D0D">Hoosier Events</h4></div></div>
 		<div class="row" style="text-align:center;"><div class="col-sm-12">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div></div>
 	<br>
 	</div>-->
-	<div class="col-sm-6 links" style="color:#AE0D0D;"><div class="row"  style="background-color:"><div class="col-sm-12"><h4>About HoosierEvents</h4></div></div>
+	<div class="col-sm-6 links" style="color:#AE0D0D;"><div class="row"  style="font-family: 'Oxygen', sans-serif;
+background-color:"><div class="col-sm-12"><h4>About HoosierEvents</h4></div></div>
 		
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">Sitemap</a></div></div>
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">About us</a></div></div>
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">FAQs</a></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">Sitemap</a></h5></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">About us</a></h5></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">FAQs</a></h5></div></div>
 		<br>
 	</div>
 	
-	<div class="col-sm-6"><div class="row"  style="background-color:"><div class="col-sm-12" style="text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
+	<div class="col-sm-6"><div class="row"  style="background-color:"><div class="col-sm-12" style="font-family: 'Oxygen', sans-serif;
+text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
 				           <!--  <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
 							<br>
 				            <i class="fa fa-envelope mr-3"></i>&nbsp info@example.com
