--- a/src/main/resources/static/css/eventpage.css
+++ b/src/main/resources/static/css/eventpage.css
@@ -62,6 +62,8 @@ color:white;
 }
 
 .register_button{
+	font-family: 'Open Sans', sans-serif;
+
 	color:#3C6198;
 	background-color:white;
 	border: 2px solid #3C6198;
