--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -5,10 +5,11 @@
   <title>HoosierEvents</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" th:href="@{css/bootstrap.min.css}">
+    <!--<link rel="stylesheet" th:href="@{css/bootstrap.min.css}">-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen" rel="stylesheet">
   <script src="script/eventpage.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -63,6 +64,7 @@ padding-top:10px;
     visibility: hidden;
     width: 150px;
     background-color: white;
+	border:0.5px solid lightgrey;
     color: grey;
     text-align: center;
     border-radius: 6px;
@@ -121,13 +123,15 @@ background-color:#dddddd !important;
 	<div class="col-sm-4" >
 		<div class="headers">
 		<div class="row" ><h2 id="event_title"></h2></div>
-		<div class="row" ><h5 id="event_date"></h5></div>
-		<div class="row" ><h5 id="event_location" style="color:green"></h5></div>
-		<div class="row" style="color:#726868"><h5>10am-3pm</h5></div>
-		<div class="row" style="color:#3C6198"><h5>TICKETS:Available</h5></div>
+		<div class="row" ><h3 id="event_date"></h3></div>
+		<div class="row" style="color:#726868"><h3 id="event_start_time"></h3></div>
+
+		<!--<div class="row" ><h4 id="event_location" style="color:green;font-family: 'Open Sans', sans-serif;
+"></h4></div>-->
+		<div class="row" style="color:#3C6198"><h5>&nbsp</h5></div>
 		<br><br><br>
 		</div>
-		<div class="row" style="bottom:10%;position:relative"><div class="col-sm-12"><button id="registerbutt" disabled class="btn-block register_button" onClick="NewPage()"><h5>REGISTER<h5><span class="tooltiptext" ><h6>Login to Register.</h6></span></button>	
+		<div class="row" style="bottom:10%;position:relative"><div class="col-sm-12"><button id="registerbutt" disabled class="btn-block register_button" onClick="NewPage()"><h4>Register<h4><span class="tooltiptext" ><h6>Login to Register.</h6></span></button>	
 </div></div>
 	</div>
 
@@ -141,14 +145,14 @@ background-color:#dddddd !important;
 <div class="row">
 	<div class="col-sm-8">
       
-		<div class="row" style="width:90%;border-bottom:0.5px solid lightgrey">
-			<div class="page-header"><h3>Description</h3></div>
-		 </div>
 		<div class="row" style="width:90%;">
-			<div><p id="event_description"> </p></div>
+			<div class="col-sm-12"><h5><b>ABOUT THIS EVENT</b></h5></div>
+		 </div>
+		 <br>
+		<div class="row" style="width:90%;">
+			<div class="col-sm-12"><p style="font-family: 'Open Sans', sans-serif;" id="event_description"> </p></div>
 		</div>
     </div>
-		<br><br><br>
 	
 <div class="col-sm-4" style="">  
     
@@ -156,20 +160,26 @@ background-color:#dddddd !important;
 			<div class="col-sm-12"><iframe id="myIframe" style="border:1px solid lightgrey;width:100%;position:relative;left:0%;"></iframe></div>
 		</div>-->
 		
-		<br>
-		<div class="row page-header" style="text-align:left;">
-			<div class="col-sm-12"><h5>&nbsp&nbsp&nbspContact Info:</h5></div>
+	
+			<div class="row" style="text-align:left;">
+			<div class="col-sm-12"><h5><b>&nbsp&nbsp&nbspLOCATION</b></h5></div>
 		</div>
 		<div class="row" style="text-align:left;">
-			<div class="col-sm-12"><h6 id="created_by"></h6></div>
+			<div class="col-sm-12"><h5 style="font-family: 'Open Sans', sans-serif;" id="event_location">&nbsp&nbsp&nbsp</h5></div>
+		</div><br>
+		<div class="row" style="text-align:left;">
+			<div class="col-sm-12"><h5><b>&nbsp&nbsp&nbspCONTACT INFO:</b></h5></div>
+		</div>
+		<div class="row" style="text-align:left;">
+			<div class="col-sm-12"><p id="created_by" style="font-family: 'Open Sans', sans-serif;"></p></div>
 		</div>
 		
 		<div class="row" style="text-align:left;">
-			<div class="col-sm-12"><h6 id="user_email"></h6></div>
+			<div class="col-sm-12"><p style="font-family: 'Open Sans', sans-serif;" id="user_email"></p></div>
 		</div>
 		<div class="row" style="text-align:left;">
 	
-			<div class="col-sm-12"><h6 id="user_contact"></h6></div>
+			<div class="col-sm-12"><p style="font-family: 'Open Sans', sans-serif;" id="user_contact"></p></div>
 		</div><br>
 					<div class="row">
 					<div class="col-sm-3"></div>
@@ -220,29 +230,34 @@ background-color:#dddddd !important;
 	</div>
 </div>
 
-<div class="container-fluid fancy" style="border-top:1px solid lightgrey;text-align:center;top:20%;height:auto;position:relative;background-color:#D5B4AA !important;color:">
+<div class="container-fluid fancy" style="border-top:1px solid lightgrey;text-align:center;top:20%;height:auto;position:relative;background-color: !important;color:">
 <br><div class="row" style="background-color:;">
 	<!--<div class="col-sm-4">
 	<div class="row" style="background-color:lightgrey"><div class="col-sm-12"><h4 style="color:#AE0D0D">Hoosier Events</h4></div></div>
 		<div class="row" style="text-align:center;"><div class="col-sm-12">Connect with other enthusiasts and do what you enjoy. Signup to explore and host events!</div></div>
 	<br>
 	</div>-->
-	<div class="col-sm-6 links" style="color:#AE0D0D;"><div class="row"  style="background-color:"><div class="col-sm-12"><h4>About HoosierEvents</h4></div></div>
+	<div class="col-sm-6 links" style="color:#AE0D0D;"><div class="row"  style="font-family: 'Oxygen', sans-serif;
+background-color:"><div class="col-sm-12"><h4>About HoosierEvents</h4></div></div>
 		
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">Sitemap</a></div></div>
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">About us</a></div></div>
-		<div class="row"><div class="col-sm-12"><a href="" style="color:#3C48AE">FAQs</a></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">Sitemap</a></h5></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">About us</a></h5></div></div>
+		<div class="row"><div class="col-sm-12"><h5><a href="" style="font-family: 'Open Sans', sans-serif;
+color:#3C48AE">FAQs</a></h5></div></div>
 		<br>
 	</div>
 	
-	<div class="col-sm-6"><div class="row"  style="background-color:"><div class="col-sm-12"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
+	<div class="col-sm-6"><div class="row"  style="background-color:"><div class="col-sm-12" style="font-family: 'Oxygen', sans-serif;
+text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
 				           <!--  <i class="fa fa-home mr-3"></i>&nbsp Bloomington, IN 47408, US
 							<br>
 				            <i class="fa fa-envelope mr-3"></i>&nbsp info@example.com
 							<br>
 							<i class="fa fa-phone mr-3"></i>&nbsp + 01 234 567 88 -->
 
-	<div class="row">
+		<div class="row">
 		<div class="col-sm-4"></div>
 
 		<div class="col-sm-1" style="padding-right:25px;" ><a href="#" class="fa fa-facebook"></a></div>
@@ -291,7 +306,7 @@ var loc="Bloomington";
 
 /*passing parameter to iframe*/
 /*document.getElementById('myIframe').src = "/map?seed=" + loc;*/
-
+var x;
 var event_id=document.URL.substr(document.URL.indexOf('=')+1);
 $(document).ready(function(){
 	$.ajax({
@@ -303,12 +318,21 @@ $(document).ready(function(){
 			console.log('success',data);
 			document.getElementById("eventimg").src='/getImage?img='+ data.id+'.jpg';
 			document.getElementById("event_title").innerHTML=data.eventTitle;
-			document.getElementById("event_date").innerHTML=data.startDate;
-			document.getElementById("event_location").innerHTML=data.location;
+			alert(data.startDate);
+			for (x=0;x<=9;x++)
+			{
+						document.getElementById("event_date").innerHTML+=data.startDate[x];
+
+			}
+			for(x=11;x<=15;x++)
+			{
+			document.getElementById("event_start_time").innerHTML+=data.startDate[x];
+			}
+			document.getElementById("event_location").innerHTML+=data.location;
 			document.getElementById("event_description").innerHTML=data.description;
 			document.getElementById("created_by").innerHTML="&nbsp&nbsp&nbsp"+data.createdBy.name;
 			document.getElementById('myIframe').src = "/map?seed=" + data.location;
-			document.getElementById("eventlocation").innerHTML=data.location;
+			document.getElementById("eventlocation").innerHTML="<h5>"+data.location+"</h5>";
 									document.getElementById("user_email").innerHTML="&nbsp&nbsp&nbsp"+data.createdBy.email;
 						document.getElementById("user_contact").innerHTML="&nbsp&nbsp&nbsp"+data.createdBy.contact;
 			
