--- a/src/main/resources/templates/Search.html
+++ b/src/main/resources/templates/Search.html
@@ -12,9 +12,36 @@
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+            (adsbygoogle = window.adsbygoogle || []).push({
+                google_ad_client: "ca-pub-7446451293480885",
+                enable_page_level_ads: true
+            });
+		</script>
 	</head>
 	
 	<body>
+<!--Advertisement-->
+	<div style='height: 0px;'></div>
+	<div align='center' id='btm_banner' style='height: 150px; z-index: 9999;'>
+		<div style='text-align: center; width: 983px'>
+			<img id='closed' src='http://3.bp.blogspot.com/-FJbBxXlFzSM/UChDqaGbcMI/AAAAAAAACPA/Lc4uhFU639c
+/s320/exit.png'/></div>
+		<div style='clear: both;'></div>
+		<p>
+		<p><center>
+		<!-- ADVERTISING CODE -->
+
+
+		<iframe src="//cdn.bannersnack.com/banners/b132cgv45/embed/index.html?userId=38477934&t=1543553569" width="728" height="90" scrolling="no" frameborder="0" allowtransparency="true" allow="autoplay" allowfullscreen="true"></iframe>
+		<!-- ADVERTISING CODE -->
+	</center></p>
+		</p>
+	</div>
+<!--Advertisement-->
+
 		<!-- <div id="header">
 			<script>
 	            $("#header").load("header.html");
