--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -12,7 +12,36 @@
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 		  	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	    <link rel="stylesheet" type="text/css" th:href="@{css/HomePageStyle.css}">
-<style>
+
+
+    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js' type='text/javascript'>
+    </script><br />
+    <script type='text/javascript'>
+        $(document).ready(function() {
+            $('img#closed').click(function(){
+                $('#btm_banner').hide(90);
+            });
+        });
+    </script>
+    <style type='text/css'>
+        div#btm_banner {
+            bottom: 0;
+            position: fixed;
+            width: 100%;
+            opacity: 0.9;
+            left: 0;
+        }
+        div#btm_banner img{
+            border:0;
+            cursor:pointer;
+        }
+    </style>
+
+
+    <style>
+
+
+
 
   .fa {
 padding-top:10px;
@@ -114,6 +143,27 @@ img {
 </script>
 </head>
 <body>
+
+<div style='height: 0px;'></div>
+<div align='center' id='btm_banner' style='height: 150px; z-index: 9999;'>
+    <div style='text-align: center; width: 983px'>
+        <img id='closed' src='http://3.bp.blogspot.com/-FJbBxXlFzSM/UChDqaGbcMI/AAAAAAAACPA/Lc4uhFU639c
+/s320/exit.png'/></div>
+    <div style='clear: both;'></div>
+    <p>
+    <p><center>
+    <!-- ADVERTISING CODE -->
+
+
+    <iframe src="//cdn.bannersnack.com/banners/bc3eh4o23/embed/index.html?userId=38477934&t=1543551194" width="728" height="90" scrolling="no" frameborder="0" allowtransparency="true" allow="autoplay" allowfullscreen="true"></iframe>
+
+     <!-- ADVERTISING CODE -->
+</center></p>
+    </p>
+</div>
+
+
+
 <div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
 <div class="col-sm-2"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></div>
@@ -349,6 +399,13 @@ text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
 </div>
 </div>-->
 <!--<button onclick="getLocation()">Try It</button>-->
+
+<!--ADVERTISEMENT-->
+
+
+
+<!--ADVERTISEMENT-->
+
 
 <script>
 
