--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -201,19 +201,18 @@ img {
       <li><a href="homePage.html" class="top-nav-links" style="color:#AE0D0D;text-align:"><h5>Explore</h5></a></li>
     </ul>
 	
-   <form class="navbar-form navbar-left" action="">
+<!--    <form class="navbar-form navbar-left" action="">
       <div class="form-group">
         <input type="text" class="form-control" style="text-align:center;" placeholder="search for events!">
       </div>
-      <button type="submit" class="btn btn-default"><h5>Search</h5></button>
-    </form> 
-	<ul class="nav navbar-nav navbar-right">
-      <li><a href="loginpage.html" style="color:#AE0D0D"><h5>Sign In</h5></a></li>
+      <button type="submit" class="btn btn-default" style="height:4.5% !important;width:15%!important;position:relative"><span class="glyphicon glyphicon-search"></span></button>
+    </form> -->
+<!--	<ul class="nav navbar-nav navbar-right">
+      <li><a href="loginpage.html" style="">Sign In</a></li>
     </ul>
 
 	</div>
 </nav>-->
-
 <div class="container" style="width:100%">
 <img class="mySlides" src="/images/p3.jpg" style="width:100%;height:auto;">
 <img class="mySlides" src="/images/p22.jpg" style="width:100%;height:auto;">
@@ -400,16 +399,11 @@ text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
 </div>-->
 <!--<button onclick="getLocation()">Try It</button>-->
 
-<!--ADVERTISEMENT-->
-
-
-
-<!--ADVERTISEMENT-->
-
-
 <script>
 
-
+function Search(){
+	document.location.href = "/search";
+}
 
 //var x = document.getElementById("demo");
 /*
@@ -646,8 +640,7 @@ var counter=0;
 			c.setAttribute("category",events[counter].category);
 			//alert(c.getAttribute("category"));
 			//alert(rr);
-									x.addEventListener("click",function(){alert('gg mf');});
-
+									
 			document.getElementById(rr).appendChild(x);
 			document.getElementById(x.id).appendChild(c);
 
