--- a/src/main/resources/templates/Search.html
+++ b/src/main/resources/templates/Search.html
@@ -20,6 +20,21 @@
                 enable_page_level_ads: true
             });
 		</script>
+
+		<style type='text/css'>
+			div#btm_banner {
+				bottom: 0;
+				position: fixed;
+				width: 50%;
+				opacity: 0.9;
+				left: 25%;
+			}
+			div#btm_banner img{
+				border:0;
+				cursor:pointer;
+			}
+		</style>
+
 	</head>
 	
 	<body>
