--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -33,9 +33,9 @@
 		div#btm_banner {
 			bottom: 0;
 			position: fixed;
-			width: 100%;
+			width: 50%;
 			opacity: 0.9;
-			left: 0;
+			left: 25%;
 		}
 		div#btm_banner img{
 			border:0;
