login button now showing

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -573,9 +573,9 @@ $(document).ready(function(){
 	   error:function(exception){
 		   console.log("error: "+ exception);}
 	});
-document.getElementById("tile1").addEventListener("click", function(){
-    alert("Hello World!");
-});	
+// document.getElementById("tile1").addEventListener("click", function(){
+//     alert("Hello World!");
+// });
 });	
 
 
